tests/negative/gold/blockA_test.gold
tests/negative/blockA_test.toit:7:16: error: Unresolved identifier: 'unresolved'
  b.call --foo=unresolved
               ^~~~~~~~~~
tests/negative/blockA_test.toit:7:4: error: Can't invoke a block with a named argument.
  b.call --foo=unresolved
   ^
tests/negative/blockA_test.toit:8:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
